[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/lobby/LobbySlot.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.10787, 0.1022, 0.14, 1 )
shadow_color = Color( 0.0313726, 0.0235294, 0.0235294, 0.466667 )
shadow_size = 1
shadow_offset = Vector2( 1, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.1617, 0.165725, 0.21, 1 )
shadow_color = Color( 0.0313726, 0.0235294, 0.0235294, 0.466667 )
shadow_size = 1
shadow_offset = Vector2( 1, 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 480, 480 )
modulate_color = Color( 0.760784, 0.207843, 0.207843, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 480, 480 )
modulate_color = Color( 0.380392, 0.760784, 0.207843, 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[node name="Slot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 2.0
margin_right = -1322.0
margin_bottom = -980.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="InactivePanel" type="Panel" parent="."]
margin_left = 1.41581
margin_top = -2.00574
margin_right = 601.416
margin_bottom = 93.9943
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActivePanel" type="Panel" parent="."]
margin_left = 1.41581
margin_top = -2.00574
margin_right = 601.416
margin_bottom = 93.9943
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyOFF" type="Panel" parent="ActivePanel"]
margin_left = 525.555
margin_top = 23.48
margin_right = 575.555
margin_bottom = 73.48
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyON" type="Panel" parent="ActivePanel"]
margin_left = 525.555
margin_top = 23.48
margin_right = 575.555
margin_bottom = 73.48
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="RichTextLabel" parent="ActivePanel"]
margin_left = 36.0
margin_top = 21.0
margin_right = 509.0
margin_bottom = 84.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Player Name 10"
text = "Player Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
